# OurMusic

./: CMakeLists.txt  Main.qml  MainTabButton.qml  MusicListMenu.qml  MusicListTabBar.qml  MusicListTabButton.qml  PlayerControllerItem.qml  SongItem.qml  collectionbroker.cpp  collectionbroker.h  main.cpp  musiccollection.cpp  musiccollection.h  playlist.cpp  playlist.h  song.cpp  song.h  songbroker.cpp  songbroker.h  songfactory.cpp  songfactory.h  src.qrc  transSecondsToTimeString.js  utiles.js
doc/: OurMusic Development Document.txt
